<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|fill"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/seekBarPuissance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <Button
                android:id="@+id/buttonAvancer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/lbl_avancer" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <Button
                android:id="@+id/buttonGauche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_gauche" />

            <Button
                android:id="@+id/buttonDroite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="23dp"
                android:text="@string/lbl_droite" />

            <Button
                android:id="@+id/buttonAlignerRoues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/buttonGauche"
                android:text="@string/lbl_alignerRoues" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <ToggleButton
                android:id="@+id/toggleButtonAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="23dp"
                android:text="@string/lbl_auto" />

            <Button
                android:id="@+id/buttonReculer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/lbl_reculer" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="23dp"
                android:text="@string/lbl_stop" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
